dockerfile-best-practices/policies/validate-base-image-tag.yaml
apiVersion: json.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: validate-base-image-tag
  annotations:
    policies.kyverno.io/title: Validate base image tag
    policies.kyverno.io/category: Dockerfile Best Practices
    policies.kyverno.io/severity: medium
    policies.nirmata.io/remediation-docs: "https://docs.nirmata.io/policysets/dockerfile_best_practices/validate-base-image-tag/"
    policies.kyverno.io/description: >-
      This policy checks whether the base image tag is defined with a specific version or digest in the Dockerfile.
spec:
  rules:
    - name: validate-base-image-tag
      match:
        all:
        - ($analyzer.resource.type): dockerfile
        - (Stages[].From | length(@) > `0`): true
      assert:
        any:
        - message: Base Image is missing version tags/digests
          check:
            ~.(Stages[].From.Image):
                (contains(@, ':') || contains(@, '@sha')): true
                (contains(@, ':latest')): false
