dockerfile-best-practices/policies/validate-expose-port-22.yaml
apiVersion: json.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: validate-expose-port-22
  annotations:
    policies.kyverno.io/title: Validating Exposed Port 22 in Dockerfile
    policies.kyverno.io/category: Dockerfile Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
      This policy checks whether Dockerfiles exposes port 22.
spec:
  rules:
    - name: prefer-copy-over-add
      match:
        all:
        - ($analyzer.resource.type): dockerfile
        - (Stages[].Commands[?Name=='EXPOSE'][] | length(@) > `0`): true
      assert:
        any:
        - message: Port 22 should not be exposed
          check:
            (Stages[].Commands[?Name=='EXPOSE'].Ports[][]):
                (contains(@, '22')): false
                (contains(@, '22/tcp')): false
